--- a/department.html
+++ b/department.html
@@ -12,12 +12,13 @@
   <div class="branch-buttons">
     <button><a href="./CSE faculty.html">CSE</a></button>
     <button><a href="./AIML Faculty.html">AIML</a></button>
-    <button><a href="./DS Faculty.html">DS</a></button>
+    <button><a href="./DS faculty.html">DS</a></button>
     <button><a href="./IOT Faculty.html">IOT</a></button>
     <button><a href="./ECE Faculty.html">ECE</a></button>
-    <button><a href="./EEE Faculty.html">EEE</a></button>
-    <button><a href="./CIVIL Faculty.html">CIVIL</a></button>
-    <button><a href="./MECH Faculty.html">MECH</a></button>
+    <button><a href="./EEE faculty.html">EEE</a></button>
+    <button><a href="./CIVIL faculty.html">CIVIL</a></button>
+    <button><a href="./MECH faculty.html">MECH</a></button>
   </div>
 </body>
 </html>
+
